Resolves: tdf#163772 move margin into ValueSet itself

instead of using margin property in .ui where size_request
doesn't take such margins into account, while pref_size does.

Change-Id: I7c557fd63c438515814ad32b9627895c27c13b81
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177213
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>